# stlplus3

./: .gitignore  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.txt  conanfile.py
docs/: building.html  changes.html  cli_parser.html  digraph.html  persistent_basic.html  persistent_edge_test.cpp  persistent_examples.html  persistent_map_test.cpp  persistent_stl.html  persistent_stlplus.html  tcp_sockets.html  udp_sockets.html  versions.html
stlplus/: CMakeLists.txt
stlplus/containers/: CMakeLists.txt  containers.hpp  copy_functors.hpp  digraph.hpp  exceptions.hpp  foursome.hpp  hash.hpp  matrix.hpp  ntree.hpp  safe_iterator.hpp  simple_ptr.hpp  smart_ptr.hpp  triple.hpp
stlplus/persistence/: CMakeLists.txt  persistence.hpp  persistent.hpp  persistent_basic.hpp  persistent_bitset.hpp  persistent_bitset.tpp  persistent_bool.cpp  persistent_bool.hpp  persistent_callback.hpp  persistent_callback.tpp  persistent_complex.hpp  persistent_contexts.cpp  persistent_contexts.hpp  persistent_cstring.cpp  persistent_cstring.hpp  persistent_deque.hpp  persistent_deque.tpp  persistent_digraph.hpp  persistent_digraph.tpp  persistent_enum.hpp  persistent_enum.tpp  persistent_exceptions.cpp  persistent_exceptions.hpp  persistent_float.cpp  persistent_float.hpp  persistent_foursome.hpp  persistent_hash.hpp  persistent_hash.tpp  persistent_inf.cpp  persistent_inf.hpp  persistent_int.cpp  persistent_int.hpp  persistent_interface.hpp  persistent_interface.tpp  persistent_list.hpp  persistent_list.tpp  persistent_map.hpp  persistent_map.tpp  persistent_matrix.hpp  persistent_matrix.tpp  (+31 more)
stlplus/portability/: CMakeLists.txt  build.cpp  build.hpp  debug.cpp  debug.hpp  dprintf.cpp  dprintf.hpp  dynaload.cpp  dynaload.hpp  file_system.cpp  file_system.hpp  inf.cpp  inf.hpp  ip_sockets.cpp  ip_sockets.hpp  portability.hpp  portability_exceptions.hpp  portability_fixes.cpp  subprocesses.cpp  subprocesses.hpp  tcp_sockets.cpp  tcp_sockets.hpp  time.cpp  time.hpp  udp_sockets.cpp  udp_sockets.hpp  version.cpp  version.hpp  wildcard.cpp  wildcard.hpp
stlplus/strings/: CMakeLists.txt  file_utilities.cpp  file_utilities.hpp  print_address.cpp  print_address.hpp  print_basic.hpp  print_bitset.hpp  print_bitset.tpp  print_bool.cpp  print_bool.hpp  print_cstring.cpp  print_cstring.hpp  print_digraph.hpp  print_digraph.tpp  print_float.cpp  print_float.hpp  print_foursome.hpp  print_hash.hpp  print_hash.tpp  print_inf.cpp  print_inf.hpp  print_int.cpp  print_int.hpp  print_list.hpp  print_list.tpp  print_map.hpp  print_map.tpp  print_matrix.hpp  print_ntree.hpp  print_pair.hpp  print_pointer.hpp  print_sequence.hpp  print_sequence.tpp  print_set.hpp  print_set.tpp  print_shared_ptr.hpp  print_simple_ptr.hpp  print_smart_ptr.hpp  print_stl.hpp  print_stlplus.hpp  (+51 more)
stlplus/subsystems/: CMakeLists.txt  cli_parser.cpp  cli_parser.hpp  ini_manager.cpp  ini_manager.hpp  library_manager.cpp  library_manager.hpp  message_handler.cpp  message_handler.hpp  subsystems.hpp  timer.cpp  timer.hpp
test/: CMakeLists.txt  hello.cxx
tests/bitset_test/: Makefile  bitset_test.cpp
tests/bool_vector_test/: Makefile  bool_vector_test.cpp
tests/callback_test/: Makefile  callback_test.cpp
tests/cstring_test/: Makefile  cstring_test.cpp
tests/deque_test/: Makefile  deque_test.cpp
tests/digraph_test/: Makefile  digraph_test.cpp
tests/dynaload_test/: Makefile
tests/edge_test/: Makefile
tests/edge_vector_test/: Makefile  edge_vector_test.cpp
tests/hash_test/: Makefile  hash_test.cpp
tests/inf_test/: Makefile  inf_test.cpp
tests/ini_manager_test/: Makefile  ini_manager_test.cpp
tests/interface_test/: Makefile  interface_test.cpp
tests/list_test/: Makefile  list_test.cpp
tests/map_test/: Makefile
tests/matrix_test/: Makefile  matrix_test.cpp
tests/ntree_test/: Makefile  ntree_test.cpp
tests/point_test/: Makefile  point_test.cpp
tests/set_test/: Makefile  set_test.cpp
tests/shared_library_test/: Makefile  shared_library_test.cpp
tests/shared_ptr_test/: Makefile  shared_ptr_test.cpp
tests/simple_ptr_test/: Makefile  simple_ptr_test.cpp
tests/smart_ptr_test/: Makefile  smart_ptr_test.cpp
tests/string_test/: Makefile  string_test.cpp
tests/subprocess_test/: Makefile  subprocess_test.cpp
tests/tcp_test/: Makefile  tcp_test.cpp
tests/traffic_light_test/: Makefile  traffic_light_test.cpp
tests/udp_test/: Makefile  udp_test.cpp
