install(FILES
    containers_fixes.hpp
    containers.hpp
    copy_functors.hpp
    digraph.hpp
    digraph.tpp
    exceptions.hpp
    foursome.hpp
    foursome.tpp
    hash.hpp
    hash.tpp 
    matrix.hpp
    matrix.tpp
    ntree.hpp
    ntree.tpp
    safe_iterator.hpp
    safe_iterator.tpp
    simple_ptr.hpp
    simple_ptr.tpp
    smart_ptr.hpp
    smart_ptr.tpp
    triple.hpp
    triple.tpp
    DESTINATION include/stlplus/containers
)























