target_sources(stlplus PUBLIC
    persistent_bool.cpp
    persistent_contexts.cpp
    persistent_cstring.cpp
    persistent_exceptions.cpp
    persistent_float.cpp
    persistent_inf.cpp
    persistent_int.cpp
    persistent_vector.cpp
    persistent_string.cpp
)

install(FILES
    persistence_fixes.hpp
    persistence.hpp
    persistent_basic.hpp
    persistent_bitset.hpp
    persistent_bitset.tpp
    persistent_bool.hpp
    persistent_callback.hpp
    persistent_callback.tpp
    persistent_complex.hpp
    persistent_complex.tpp
    persistent_contexts.hpp
    persistent_cstring.hpp
    persistent_deque.hpp
    persistent_deque.tpp
    persistent_digraph.hpp
    persistent_digraph.tpp
    persistent_enum.hpp
    persistent_enum.tpp
    persistent_exceptions.hpp
    persistent_float.hpp
    persistent_foursome.hpp
    persistent_foursome.tpp
    persistent_hash.hpp
    persistent_hash.tpp
    persistent_inf.hpp
    persistent_int.hpp
    persistent_interface.hpp
    persistent_interface.tpp
    persistent_list.hpp
    persistent_list.tpp
    persistent_map.hpp
    persistent_map.tpp
    persistent_matrix.hpp
    persistent_matrix.tpp
    persistent_multimap.hpp
    persistent_multimap.tpp
    persistent_multiset.hpp
    persistent_multiset.tpp
    persistent_ntree.hpp
    persistent_ntree.tpp
    persistent_pair.hpp
    persistent_pair.tpp
    persistent_pointer.hpp
    persistent_pointer.tpp
    persistent_pointers.hpp
    persistent_set.hpp
    persistent_set.tpp
    persistent_shared_ptr.hpp
    persistent_shared_ptr.tpp
    persistent_shortcuts.hpp
    persistent_shortcuts.tpp
    persistent_simple_ptr.hpp
    persistent_simple_ptr.tpp
    persistent_smart_ptr.hpp
    persistent_smart_ptr.tpp
    persistent_stl.hpp
    persistent_stlplus.hpp
    persistent_string.hpp
    persistent_string.tpp
    persistent_triple.hpp
    persistent_triple.tpp
    persistent_vector.hpp
    persistent_vector.tpp
    persistent_xref.hpp
    persistent_xref.tpp
    persistent.hpp
    DESTINATION include/stlplus/persistence
        )
