target_sources(stlplus PUBLIC
        file_utilities.cpp
        print_address.cpp
        print_bool.cpp
        print_cstring.cpp
        print_float.cpp
        print_inf.cpp
        print_int.cpp
        print_string.cpp
        print_vector.cpp
        string_address.cpp
        string_bool.cpp
        string_cstring.cpp
        string_float.cpp
        string_inf.cpp
        string_int.cpp
        string_string.cpp
        string_utilities.cpp
        string_vector.cpp
)





install(FILES
        file_utilities.hpp
        format_types.hpp
        print_address.hpp
        print_basic.hpp
        print_bitset.hpp
        print_bitset.tpp
        print_bool.hpp
        print_cstring.hpp
        print_digraph.hpp
        print_digraph.tpp
        print_float.hpp
        print_foursome.hpp
        print_foursome.tpp
        print_hash.hpp
        print_hash.tpp
        print_inf.hpp
        print_int.hpp
        print_list.hpp
        print_list.tpp
        print_map.hpp
        print_map.tpp
        print_matrix.hpp
        print_matrix.tpp
        print_ntree.hpp
        print_ntree.tpp
        print_pair.hpp
        print_pair.tpp
        print_pointer.hpp
        print_pointer.tpp
        print_sequence.hpp
        print_sequence.tpp
        print_set.hpp
        print_set.tpp
        print_shared_ptr.hpp
        print_shared_ptr.tpp
        print_simple_ptr.hpp
        print_simple_ptr.tpp
        print_smart_ptr.hpp
        print_smart_ptr.tpp
        print_stl.hpp
        print_stlplus.hpp
        print_string.hpp
        print_triple.hpp
        print_triple.tpp
        print_vector.hpp
        print_vector.tpp
        string_address.hpp
        string_basic.hpp
        string_bitset.hpp
        string_bitset.tpp
        string_bool.hpp
        string_cstring.hpp
        string_digraph.hpp
        string_digraph.tpp
        string_float.hpp
        string_foursome.hpp
        string_foursome.tpp
        string_hash.hpp
        string_hash.tpp
        string_inf.hpp
        string_int.hpp
        string_list.hpp
        string_list.tpp
        string_map.hpp
        string_map.tpp
        string_matrix.hpp
        string_matrix.tpp
        string_ntree.hpp
        string_ntree.tpp
        string_pair.hpp
        string_pair.tpp
        string_pointer.hpp
        string_pointer.tpp
        string_sequence.hpp
        string_sequence.tpp
        string_set.hpp
        string_set.tpp
        string_shared_ptr.hpp
        string_shared_ptr.tpp
        string_simple_ptr.hpp
        string_simple_ptr.tpp
        string_smart_ptr.hpp
        string_smart_ptr.tpp
        string_stl.hpp
        string_stlplus.hpp
        string_string.hpp
        string_triple.hpp
        string_triple.tpp
        string_utilities.hpp
        string_vector.hpp
        string_vector.tpp
        strings_fixes.hpp
        strings.hpp
        DESTINATION include/stlplus/strings
)

install(TARGETS stlplus DESTINATION stlplus)



 






























































































