target_sources(stlplus PUBLIC
        cli_parser.cpp
        ini_manager.cpp
        library_manager.cpp
        message_handler.cpp
        timer.cpp
        )


install(FILES
        cli_parser.hpp
        ini_manager.hpp
        library_manager.hpp
        message_handler.hpp
        subsystems_fixes.hpp
        subsystems.hpp
        timer.hpp
        DESTINATION include/stlplus/subsystems
)












 
 
 
 
 
 
 
 
 
 
 
 
































